NEWS -- an overview of user-visible changes with each release

----------------------------------------------------------------------
epson-inkjet-printer-escpr2-1.2.34                        (2025-06-03)
----------------------------------------------------------------------
 * Supported new models

----------------------------------------------------------------------
epson-inkjet-printer-escpr2-1.2.33                        (2025-05-27)
----------------------------------------------------------------------
 * Supported new models

----------------------------------------------------------------------
epson-inkjet-printer-escpr2-1.2.32                        (2025-05-26)
----------------------------------------------------------------------
 * Supported new models

----------------------------------------------------------------------
epson-inkjet-printer-escpr2-1.2.31.1                      (2025-05-02)
----------------------------------------------------------------------
 * Supported new models

----------------------------------------------------------------------
epson-inkjet-printer-escpr2-1.2.31                        (2025-04-16)
----------------------------------------------------------------------
 * Supported new models

----------------------------------------------------------------------
epson-inkjet-printer-escpr2-1.2.30                        (2025-04-09)
----------------------------------------------------------------------
 * Supported new models

----------------------------------------------------------------------
epson-inkjet-printer-escpr2-1.2.29                        (2025-03-21)
----------------------------------------------------------------------
 * Supported new models

----------------------------------------------------------------------
epson-inkjet-printer-escpr2-1.2.28                        (2025-03-07)
----------------------------------------------------------------------
 * Supported new models
