@@ -1,4 +1,4 @@
-List of PostScript Printer Description files (PPDs) in epson-inkjet-printer-escpr2-1.2.34:
+List of PostScript Printer Description files (PPDs) in epson-inkjet-printer-escpr2-1.2.35:
 
 Epson EC-4020 Series
 Epson EC-4030 Series
@@ -87,8 +87,10 @@ Epson ET-M16685 Series
 Epson EW-M530F Series
 Epson EW-M630T Series
 Epson EW-M634T Series
+Epson EW-M638T Series
 Epson EW-M670FT Series
 Epson EW-M674FT Series
+Epson EW-M678FT Series
 Epson EW-M752T Series
 Epson EW-M754T Series
 Epson EW-M757T Series
