@@ -1,8 +1,8 @@
 DIST epson-inkjet-printer-escpr2-1.1.62-1lsb3.2.i486.rpm 3696192 BLAKE2B 47600186c0d2c4291c5c729be5e9020efb527f765bccbbfa5b4b2e7ca972faf1a79e4c4fdbc9e6b1200e8d4945a187a28f70a9eb927d0b1a769015462124a634 SHA512 464a8de063e092092f464478c3167b8f18792e2a0cda22e970fbbd910eb4417d880c84730cfcc8ec1b4c24f214bd26fcaa13d296258394083a43d497fa753138
 DIST epson-inkjet-printer-escpr2-1.1.62-1lsb3.2.x86_64.rpm 3695594 BLAKE2B ef23b41c05104d488c2d67bf5a95523b496d548be91b826cf7a709bd370ae6c8156421fe89480fead743a99576c0c3aa70a129dccfa5173934adacb05dd5d7bb SHA512 2f0664e798166fd09e3da12328e02e8e9e51cac3ea3e941e293803dfa7e80e3b4523369373d8e0b917082c545374a6d1fbe88ae45ad7f18a94abc2a78a331218
-DIST epson-inkjet-printer-escpr2-1.2.33-1.x86_64.rpm 4899561 BLAKE2B ddc48170fedd7dc9329a2efb01b569a596bb4c5f6723d15f3466d7663a38e87da16ed47d1e3f93369f33b83ad912c22a8a2a05808ec4460fd7fd036c4d1aa86a SHA512 36c2f728856a219124967761da52dc6521194d05fcc848a460c38679b8a2e25d6d9be2c73aafd7a440144b6172b9ded68649aa5f5aa0f063a4a9f37c47bfe45a
 DIST epson-inkjet-printer-escpr2-1.2.34-1.x86_64.rpm 4894604 BLAKE2B 27ad7f747a42fe42a3132fd82c7e635d562aa02e8c84b73b1ce5240df0db234523e9b02f978740cd6d2c25921825772a03a2e1a2773eabecb494c5b3975742a6 SHA512 b32502d15b6b47957a6d46483a82201e6f2ef2aa73108b55c31945c51698c3dcceb7aa6d820e9fa98bf8c04aed146ec497e302658431a424a334e589d82c10d9
+DIST epson-inkjet-printer-escpr2-1.2.35-1.x86_64.rpm 4933888 BLAKE2B a893ae403abaf94ca72ec82d83ed337bca98ebbfbe1b36d76dd2b4dc68da8befbfbf64bf5a1bee559c0f5406e4c9dad857eecf9fb92e467d4deeff421adf84f2 SHA512 41beff8a1b8bcc9429dcf36d3c9fc525cdd194c73fb77cf6877f43921aabf44220c1effe6429b2879dfda1cae83c2167139e882f045470d8d5f89aac67e23f9e
 EBUILD epson-inkjet-printer-escpr2-bin-1.1.62.ebuild 1843 BLAKE2B bbe1b11046a92a16e9d0e76298620cb1b288d60569a89f705f37bd20b502dc9d54661e021bfae25075397f06db7c73f2245e7860d72533b1b96d43615a05e13e SHA512 3a0c9d2fabee1b1d0d87f7a794732539dd3c5685e16a9e32ea101c65f84016029e59e4dd7005c57d1bf3dc7195527bd99b3e0c8ce2ae13047659f7ba25a2b53c
-EBUILD epson-inkjet-printer-escpr2-bin-1.2.33.ebuild 1460 BLAKE2B 15c518dffb92ea8a52c4bb6197f73bdc224331e7ef8ff16ec7f43b03ff69bca781468613c1212ea189a2a2f94a9e226841899440bca91ccfb9ba58e5fa065f32 SHA512 7d7f11dfe065b6785c97be4c754d5c3ca8fcd477093fff3a494a67778d99c850eb839abf9b0e793122a539c375f8270ff5eaf83658baec28cfbe84570d0cade2
 EBUILD epson-inkjet-printer-escpr2-bin-1.2.34.ebuild 1460 BLAKE2B 12739e979d513411f68c1cc0544f6ad2472d7ea46e771d277f7dbfdcbd882154c1435b4fb1921212212ea2d8f21a081d27008b538ba008e6dfc9a4269264e36e SHA512 3e594920d88abf92d5be45fc2222d4708faf1c74d12c6b870289787729ddf6cff78eaf534cdf8968905ac517544db8796ea977919272ead6f3667f08d032deb2
+EBUILD epson-inkjet-printer-escpr2-bin-1.2.35.ebuild 1460 BLAKE2B 793f9883d31bc6cf91c7a4226e21a7ec64eff2ac84bd73b86aff8fa561914a3c4d042dfea6b549612dc76cee3672339ab98ebf066f0380d586af8b38bcca841b SHA512 dd45a98c90841ba3dabeec5c674567222cb95bf3e98a3937999471fcefe40d1e55ff4247e6ea40e88539b1e6d3b39285e20748255802a047ad8de23dc4da3903
 MISC metadata.xml 754 BLAKE2B 8c7bf6fb2c07b1340ad2a2777faeefabaa07cc7d4637029265eccaf4613695772267da3a2a729f3a05fef7228f1c54840de30fb9914a996765637d505dfa776e SHA512 e6905e32c6a4e8cbe2e5e9a609c77176ccd4669fd08c4f2cb6eb9f272c10a68dc6355703f605d8229787e9b939790f562493661eeba78c48b707b203f55e256e
