@@ -2,9 +2,9 @@ AUX gcc-no-implicit-function-declaration-1.1.15.patch 2428 BLAKE2B 2a6b8f6b9cba9
 AUX gcc-no-implicit-function-declaration-1.2.10.patch 2421 BLAKE2B 158c074ec7d37ee1a09b29bbee21c29da0ff2784fe25b22f64d2b199b07a8d8c90ca92477f7c284ded194c1a66bee219943b7c827bf7fb1b58227b3e7caedc3b SHA512 55533abc7b4f4cfa6c95868726721e59d187601722c0b2daa38d913f15ce9c695ae4c900274c46a770cfcdf85c46f77c724b936686a70bae34be5660c41a34aa
 AUX gcc-no-implicit-function-declaration-1.2.31.patch 2039 BLAKE2B 9ed61cbb23824f2f3821b573bd067318d47bad86abfa006297abbe0e12be092c4d9e2bbc51cba47c190d89a2879403344383b3415d91b5a37049ae0b38486203 SHA512 1a8fb41a48b74ffd72b65cec4f3b1afb8f5023b6b457eeb7716337db5d9e413c38afb5bdf22d7ccb1df94d04a5054c9548b32a348f0f8fc8181b8804f887b063
 DIST epson-inkjet-printer-escpr2-1.1.62.tar.gz 5101117 BLAKE2B 8bea8fa19ba56d008b1dce174367473287c386bcffbc2df2397f4d9aa396ca9ba447b2719d132e7dd7d800e51b685f6397bb30ed2eac1da813fe456fffa5723a SHA512 648006b9f7b14a5fd7ed31516d420c463383b99a8bbc693a2378128d4e4729290ba2deabfeb8526009c223f8e84d5565b4aba80b5478c6c4865ba9e84948b9b0
-DIST epson-inkjet-printer-escpr2-1.2.33-1.tar.gz 6428745 BLAKE2B 2cb1033974d56883a481d7addcc63ccb55e6df6d7866791b2dfbf4c6dc3be2b702829fdaf1cdec21935f54c7fe7390f3cfa2cadb24e86baa31b8f19f210b6c24 SHA512 644bf6aefc149359da023d5c116db989c9f58c512f205f226640f1c230811881e9927f2883b42cbe79b14a09eff9c32141d80748748366cce322578235b08d2c
 DIST epson-inkjet-printer-escpr2-1.2.34-1.tar.gz 6447394 BLAKE2B f7d90cac0ff9ff6117f1c33c85293e38358dae655893234ab40904406efa96215a88f8b74818710be3593d69c5ac18730fd03d613764e73d98b6d64f0fa0f510 SHA512 81f253253b5c6327c33cd9b090332c542d51650b8e1347bfa53e3316a7a036b3b0cdf607790e8d77d6efeb39c6f9625227810139f0b6b37fc4d901e216646246
+DIST epson-inkjet-printer-escpr2-1.2.35-1.tar.gz 6492364 BLAKE2B 83eb03172b457441bc2e943a418878e69c3fa09694aac18eb155ad6c3526457db5903c9082cc922cc1ecb163628d1e610baf6c50b6c242dd0b2f09c4e32b53f3 SHA512 c8f543aefdc4c8304adb1b550a22872ee9f4ecabae1d65f06e7db824b379fc4015025ad362b1ef0bad0fcc9df44339a6b8e235230610841db6cb5af157d25527
 EBUILD epson-inkjet-printer-escpr2-1.1.62.ebuild 1526 BLAKE2B a7d8e558a18c211faf4c971074e88daf7c25b6b0c4ec0a9e5a4ef3657527fd3fa11c21a8aa7db42f419eeb1d45780635433d3e9efc8bd8dbc4b50420bc199443 SHA512 ce66e10bbff3de69007c0edf784c88578f2fcec6b9b81b745eb59541fba73dd43749abd35f58e3e4e13bd7d0a5f2196705a7438123d30af39d66cf1daa48ed64
-EBUILD epson-inkjet-printer-escpr2-1.2.33.ebuild 1898 BLAKE2B 81f331f33bbe31ab9eff630d649b3f3aa80ea9462df10be07ba8edecfc13a773bb98495c19aea0620a0e784c3ac7492c7442e54b8878da2a9dcd0a9ffc98c215 SHA512 aa60afd9664acdf43807604ef69ac4def0bba75cf3f005bdacec0b6e492543740945a05ae7fafd3cb1cda01d599f8cef1e1b40e7fee635651c2d43eec4855783
 EBUILD epson-inkjet-printer-escpr2-1.2.34.ebuild 1898 BLAKE2B ef03948922afb04744b30e487a207ec03673a99fe8e25f98cab84748e7f06741bea6c8522e73c74af9ae7de46a8205a9edb1be5d33ea2986d76322f7b78fc663 SHA512 c5ef32925f4302322bac4c1e2223bdef057d58e318d9bfbbd06bb517a4374dd7576b4edaec4ab7847ab02692e1863f2a17dc5d0cfca7f100fd5e34e55cca0d49
+EBUILD epson-inkjet-printer-escpr2-1.2.35.ebuild 1898 BLAKE2B 36940276a78b0e895a720a7e8b0084dda990c38240520ec6f42df44f2d88557d16abd97664edf5af197cb4838d0b493f31e02fe12288781b9753de4304e610ea SHA512 02df8507c3f2d043e2255ba2b144dd906357ee9c50e031449741ae41fd71e3b6da64b0b0a100affe6b73e70fbcd2b59cfaced54b0c2261046f2037a0e8bc17f0
 MISC metadata.xml 775 BLAKE2B 4877278409048049f2b34c2f8603b0845bfbabdb5823b4ae6ab9559cfa64690a059e8d8b2d78990d443464e3604a7c50a1ea210f324cdd4beb7c103e25250f7c SHA512 76daff7f5cab31c3372e9e764497870ee78f1a22ff44225b943fe7f0e7545b56ad7a0cf4544213089d855e6f478facbfc40d43dfdc78abfa11315e6a03d83ac1
